--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Addo API</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-	<meta http-equiv="refresh" content="0;https://vismaaddo.github.io/AddoAPI/ADDO/index.html">
+	<meta http-equiv="refresh" content="0;https://github.com/vismaaddo">
 </head>
 <body>
-	<p>The page can be found <a href="https://vismaaddo.github.io/AddoAPI/ADDO/index.html">here</a>.</p>
+	<p>The page can be found <a href="https://github.com/vismaaddo">here</a>.</p>
 </body>
 </html>
