--- a/ADDO/API-Documentation---Addo-Web-Service_30376051.html
+++ b/ADDO/API-Documentation---Addo-Web-Service_30376051.html
@@ -3,7 +3,7 @@
     <head>
         <title>Visma Addo : API Documentation - Addo Web Service</title>
         <link rel="stylesheet" href="styles/site.css" type="text/css" />
-        <link rel="stylesheet" href="/addo.css" type="text/css" />
+        <link rel="stylesheet" href="/vismaaddo/addo.css" type="text/css" />
         <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
 
